ADD: passing dayOfWeek through query added
parameter dayOfWeek added to endpoint
places/{placeId} so that now opening hours for
specific day can be obtained.
